# cuda

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/daisaku31469/cuda/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeLibrary.cpp  NativeLibrary.h  NativeLibrary.java  cuda_ridge_detection.cu  libcuda_ridge_detection.exp
app/src/main/java/com/daisaku31469/cuda/: MainActivity.kt  WeeklyWeatherActivity.kt
app/src/main/java/com/daisaku31469/cuda/adapter/: WeeklyWeatherAdapter.kt
app/src/main/java/com/daisaku31469/cuda/dao/: WeatherDataDao.kt  WeatherDataRepository.kt  WeatherDatabase.kt
app/src/main/java/com/daisaku31469/cuda/data/: PrecipitationProbabilityUtil.kt
app/src/main/java/com/daisaku31469/cuda/entity/: WeatherData.kt
app/src/main/java/com/daisaku31469/cuda/viewmodel/: MainViewModel.kt  ViewModelFactory.kt  WeatherDataViewModel.kt  WeatherViewModel.kt
app/src/main/res/layout/: activity_main.xml  activity_weekly_weather.xml  dialog_date_time_picker.xml  dialog_listview.xml  item_weather_data.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/daisaku31469/cuda/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
